backend/src/main/java/com/example/tutorApp/errors/EmailNotFundException.java
package com.example.tutorApp.errors;

public class EmailNotFundException extends RuntimeException {
    public EmailNotFundException(String email) {
        super("Email: " + email + " has not been found in system.");
    }
}
